# simplezarr

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  guide.rst  index.rst  util_chunkpool.rst  util_multiscale.rst  utils.rst
simplezarr/: __init__.py  _version.py  codecs.py  indexing.py  misc.py  nodes.py  stores.py
simplezarr/utils/: chunkpool.py  logs.py  multiscale.py  units.py  write_multiscale.py
tests/: benchmark.py  test_codecs.py  test_indexing.py  test_nodes.py  test_stores.py  test_util_multiscale.py  test_utils_chunkpool.py  test_utils_multiscale.py  test_utils_write_multiscale.py
