# ===== Project info

[project]
dynamic = ["version"]
name = "simplezarr"
description = "A simple, elegant, and efficient Zarr implementation."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Almar Klein" }]
keywords = ["zarr"]
requires-python = ">= 3.12"
dependencies = ['numpy', 'numcodecs', 'google-crc32c>=1.5']
[project.optional-dependencies]
lint = ["ruff", "pre-commit"]
docs = ["sphinx>7.2", "sphinx_rtd_theme"]
tests = ["pytest", "pytest-cov"]
dev = ["simplezarr[lint,tests,docs]"]

[project.urls]
Homepage = "https://github.com/canpute/simplezarr"
Repository = "https://github.com/canpute/simplezarr"
# Documentation = "https://simplezarr.readthedocs.io"

# ===== Building

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

# ===== Tooling

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "N", "B", "RUF"]
ignore = [
    "E501",    # Line too long
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "E731",    # Do not assign a `lambda` expression, use a `def
    "RUFF022", # __all__ is not sorted
]


[tool.coverage.report]

exclude_also = [
    # Have to re-enable the standard pragma, plus a less-ugly flavor
    "pragma: no cover",
    "no-cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "if __name__ == .__main__.:",
]
